# loop-orchestrator

./: .dockerignore  .gitignore  .infisical.json  CLAUDE.md  Dockerfile  README.md  loop_engine.mcp.json  loop_orchestrator.mcp.json  migration_architecture_plan.md  pyproject.toml  requirements.md  sbom.json
.agent/: MEMORY.md  STATE.md
.ai/: next-steps.md
.ai/context/: conventions.md  modules.md  workflow.md
.claude/: settings.json
.claude/agents/: architect.md  coder.md  docs-consistency.md  guard-adversary.md  live-verify.md  mutation-triage.md  security-critic.md
.claude/hooks/: ai-cursor-banner.sh
.devcontainer/: devcontainer.json  gpg-forward.sh  infisical-start.sh  poststart.sh  seed-secrets.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  hitl-review.yml  pr-title.yml  ruleset-drift.yml
containers/keyring_backend/: cryptfile_backend.py  test_cryptfile_backend.py
docs/: _sprint37_task3_verification.md  architecture_definition.md  backlog.md  bounty_loop_architecture.md  claude_ralph_loop_token_saving.md  migration_roadmap.md  phase3_execution_isolation_plan.md  project_spec.json  project_spec.v1.json  slack_escalation_live_smoke.md
prompts/: 00_pm_extraction_prompt.md  00_pm_followup_prompt.md  00_pm_resolution_prompt.md  01_architecture_review_prompt.md  02_architecture_definition_prompt.md  02_architecture_resolution_prompt.md  03_agile_sprint_breakdown_prompt.md  04_developer_iac_implementation_prompt.md
scratch/: .le_python_path  jgroves27-gpg-pubkey.asc  v1_requirements.md  v2_escalations.jsonl  v2_escalations_rerun7.jsonl  v2_escalations_rerun8.jsonl  v2_requirements.md  v2_requirements_min.md  v2_rerun7_state_snapshot.json  v2_run_harness.py  v3_record_template.md  v3_run_plan.md  v3a_verbs.py  v3b_engine.py  v3b_forcing_input.md
sprints/: DEFERRED_VERIFICATION.md  GLOBAL_DEFINITION_OF_DONE.md
sprints/01_ci_cd_foundation/: sprint_plan.md
sprints/02_state_and_persona_contract/: sprint_plan.md
sprints/03_llm_client_and_secrets/: sprint_plan.md
sprints/04_state_persistence_and_artifacts/: sprint_plan.md
sprints/05_sequential_execution_engine/: sprint_plan.md
sprints/06_default_persona_implementations/: sprint_plan.md
sprints/07_default_loop_and_cli/: sprint_plan.md
sprints/08_observability_and_hardening/: sprint_plan.md
sprints/09_coder_targeted_reentry/: sprint_plan.md
sprints/10_usd_budget_and_pricing/: sprint_plan.md
sprints/11_prompt_caching/: sprint_plan.md
sprints/12_targeted_revisions/: sprint_plan.md
sprints/13_agentic_coder_tooling/: sprint_plan.md
sprints/14_agentic_coder_persona_and_gate/: sprint_plan.md
sprints/15_streaming_transport/: sprint_plan.md
sprints/16_metered_budget_enforcement/: sprint_plan.md
sprints/17_thinking_policy_and_failure_ux/: sprint_plan.md
sprints/18_execution_isolation_container/: sprint_plan.md
sprints/19_ralph_coder/: sprint_plan.md
sprints/19a_ralph_hardening/: sprint_plan.md
sprints/20_declarative_generators/: sprint_plan.md
sprints/21_declarative_review_fixes/: sprint_plan.md
sprints/22a_mcp_multiserver_discovery/: sprint_plan.md
sprints/22b_native_github_server/: sprint_plan.md
sprints/23_trigger_surface/: sprint_plan.md
sprints/23a_trigger_review_fixes/: sprint_plan.md
sprints/24_maintenance_flow/: sprint_plan.md
sprints/25_bootstrap_flow/: sprint_plan.md
sprints/26_issue_io_mcp_unification/: sprint_plan.md
sprints/27_phase6_flip_block/: sprint_plan.md
sprints/28_gate_pytest_sandbox/: sprint_plan.md
sprints/29_coder_host_run_hardening/: sprint_plan.md
sprints/30_ralph_test_scope/: sprint_plan.md
sprints/31_ralph_completion_integrity/: sprint_plan.md
sprints/32_artifact_refs_strip/: sprint_plan.md
sprints/33_ci_title_starvation/: sprint_plan.md
sprints/34_ci_supply_chain_hardening/: sprint_plan.md
sprints/35_migration_merge/: sprint_plan.md
sprints/36_live_factory_verification/: sprint_plan.md
sprints/37_test_suite_velocity/: sprint_plan.md
sprints/38_test_validity_audit/: audit_report.md  mutation_baseline.md  sprint_plan.md
sprints/39_bl2_slack_notify/: sprint_plan.md
sprints/40_bl2_slack_inbound/: sprint_plan.md
sprints/41_bl2_slack_escalation/: sprint_plan.md
sprints/43_bl5_model_routing/: sprint_plan.md
sprints/44_inventory_db/: sprint_plan.md
sprints/45_scope_validator_ingestion/: sprint_plan.md
sprints/46_bounty_loop_skeleton/: sprint_plan.md
sprints/47_bounty_recon_data_path/: sprint_plan.md
src/loop_engine/: __init__.py  cli.py  runner.py
src/loop_orchestrator/: __init__.py  cli.py  runner.py
tests/: _sprint37_task3_verification_test.py  test_ci_config.py  test_cli.py  test_public_api.py  test_runner.py  test_scaffold.py
tests/core/: conftest.py  test_boundaries.py  test_coder_gate.py  test_critic_gate.py  test_engine.py  test_gates.py  test_graph_engine.py  test_notify.py  test_state.py
tests/flows/: test_boundaries.py
tests/integration/: test_budget_abort.py  test_no_credential_leakage.py  test_revision_flow.py  test_worktree_isolation.py
tests/loops/: test_bounty.py  test_declarative_pipeline.py  test_default.py
tests/personas/: test_agile_sprint_breakdown.py  test_architecture.py  test_base.py  test_coder_iac.py  test_coder_mode.py  test_coder_tool_backend.py  test_pm.py  test_pm_fold_answers.py  test_prompt_parity.py  test_ralph_coder.py  test_sections.py  test_task_manifest.py
tests/slack_control/: test_boundaries.py  test_command.py  test_daemon.py  test_dispatch.py
tests/tools/: _ast_open.py  test_agent_state.py  test_artifact_store.py  test_coder_tools.py  test_encoding_boundary.py  test_env_compat.py  test_gate_pytest.py  test_github_server.py  test_isolation.py  test_issue_io.py  test_issue_io_server.py  test_issue_provider.py  test_keyring_boundary.py  test_llm_client.py  test_llm_client_tls.py  test_logging_config.py  test_mcp_config.py  test_mcp_multiserver.py  test_mcp_provider.py  test_pricing.py  test_repo_io.py  test_sandbox_params.py  test_slack_io.py  test_state_io.py  (+9 more)
(+207 files in other folders)
