[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loop-engine"
version = "0.1.0"
description = "A loop persona framework"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Jared Groves", email = "jgroves27@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "pydantic==2.13.4",
  "anthropic==0.116.0",
  "keyring==25.7.0",
  "typer==0.26.8",
  # Orchestration substrate: the engine runs as a LangGraph StateGraph (behind
  # the LOOP_ENGINE_ENGINE=langgraph flag during the migration).
  "langgraph==1.2.8",
  # Model Context Protocol: coder tools are re-fronted as stdio MCP servers
  # (mcp_servers/) and discovered/dispatched by the LLM client behind the
  # LOOP_ENGINE_TOOLS=mcp flag during the migration.
  "mcp==1.28.1",
  # Runtime (not just dev) dependency: the agentic Coder's run_tests tool and
  # the Coder stage's evidence gate execute pytest via subprocess.
  "pytest==9.1.1",
]

[project.scripts]
loop-engine = "loop_engine.cli:app"

[project.urls]
Documentation = "https://github.com/glunk-works/loop-engine#readme"
Issues = "https://github.com/glunk-works/loop-engine/issues"
Source = "https://github.com/glunk-works/loop-engine"

[tool.hatch.build.targets.wheel]
packages = ["src/loop_engine"]

[tool.hatch.envs.default]
dependencies = [
  "pytest==9.1.1",
  "ruff==0.15.20",
  "cyclonedx-bom==7.3.0",
  "cryptography==49.0.0",
  "pip-audit==2.10.1",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
lint = "ruff check ."
format = "ruff format ."
sbom = "cyclonedx-py environment -o sbom.json"
# Scans the hatch env's installed packages — the same closure sbom covers.
# --skip-editable excludes only loop-engine itself (a local dev-mode install
# that isn't on PyPI and can't be audited); every third-party dependency is
# still checked against the OSV/PyPI advisory databases.
audit = "pip-audit --skip-editable {args}"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S"]

[tool.ruff.lint.per-file-ignores]
# S101: pytest's assert-based idiom is expected in test files.
"tests/**" = ["S101"]
# S106/S107: fixture passphrases in tests, not real secrets.
"containers/keyring_backend/test_cryptfile_backend.py" = ["S101", "S106", "S107"]
