[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loop-engine"
version = "0.1.0"
description = "A loop persona framework"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Jared Groves", email = "jgroves27@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "pydantic==2.13.4",
  "anthropic==0.116.0",
  "keyring==25.7.0",
  "typer==0.26.8",
  # Orchestration substrate: the engine runs as a LangGraph StateGraph (behind
  # the LOOP_ENGINE_ENGINE=langgraph flag during the migration).
  "langgraph==1.2.9",
  # Model Context Protocol: coder tools are re-fronted as stdio MCP servers
  # (mcp_servers/) and discovered/dispatched by the LLM client behind the
  # LOOP_ENGINE_TOOLS=mcp flag during the migration.
  "mcp==1.28.1",
  # Runtime (not just dev) dependency: the agentic Coder's run_tests tool and
  # the Coder stage's evidence gate execute pytest via subprocess.
  "pytest==9.1.1",
  # Declarative persona config format (GeneratorNode, behind the
  # LOOP_ENGINE_PERSONAS=declarative flag). Loaded with yaml.safe_load only —
  # never yaml.load — so an in-repo config can never instantiate code.
  "PyYAML==6.0.3",
  # Trigger surface — GitHub webhook ASGI app; uvicorn/hosting deferred.
  "fastapi==0.139.0",
]

[project.scripts]
loop-engine = "loop_engine.cli:app"

[project.urls]
Documentation = "https://github.com/glunk-works/loop-engine#readme"
Issues = "https://github.com/glunk-works/loop-engine/issues"
Source = "https://github.com/glunk-works/loop-engine"

[tool.hatch.build.targets.wheel]
packages = ["src/loop_engine"]
# No force-include needed: hatchling's default `packages` file selection
# already ships non-`.py` files under the package tree (verified by building
# a wheel and inspecting it — `tools/scaffold/templates/` lands intact,
# including `.tmpl` files and `CLAUDE.md`).

[tool.hatch.envs.default]
dependencies = [
  "pytest==9.1.1",
  "ruff==0.15.20",
  "cyclonedx-bom==7.3.0",
  "cryptography==49.0.0",
  "pip-audit==2.10.1",
  # Trigger surface tests only: Starlette's TestClient needs httpx. Dev/test
  # dependency, not a runtime one — the app itself never imports it.
  "httpx==0.28.1",
  # Sprint 37 Task 4: parallel test runs via `test-parallel` below. Not wired
  # into the default `test` script -- that keeps the documented single-file/
  # single-test fast path (`hatch run test tests/x.py::test_name`) exactly as
  # fast as before, since worker-spinup overhead would dominate a 1-test run.
  "pytest-xdist==3.8.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
# Measured (Sprint 37 Task 4): ~1.7-1.8x wall-clock speedup on the full suite,
# repeatable, no flake, 573/573 passed across 5 runs at two worker counts.
# `--dist=loadscope` (not the xdist default) keeps each test *module*'s tests
# on one worker -- module-scoped MCP-provider fixtures (Task 2) do not
# amortize across workers otherwise, and the default distribution showed
# real instability (one transient >120s hang) on a small file subset spread
# thin across many workers; loadscope was stable across every repeat run.
test-parallel = "pytest -n auto --dist=loadscope {args}"
lint = "ruff check ."
format = "ruff format ."
sbom = "cyclonedx-py environment -o sbom.json"
# Scans the hatch env's installed packages — the same closure sbom covers.
# --skip-editable excludes only loop-engine itself (a local dev-mode install
# that isn't on PyPI and can't be audited); every third-party dependency is
# still checked against the OSV/PyPI advisory databases.
audit = "pip-audit --skip-editable {args}"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S"]

[tool.ruff.lint.per-file-ignores]
# S101: pytest's assert-based idiom is expected in test files.
# S603/S607: tests legitimately shell out to `git` (worktree isolation) with a
# fixed argv and no shell — the same posture the runtime code documents inline.
# S105: the trigger tests' webhook secret is an obviously-fake literal
# ("test-webhook-secret-not-a-real-credential"), not a real credential.
"tests/**" = ["S101", "S603", "S607", "S105"]
# S106/S107: fixture passphrases in tests, not real secrets.
"containers/keyring_backend/test_cryptfile_backend.py" = ["S101", "S106", "S107"]
